--- a/android/src/main/res/xml/filepaths.xml
+++ b/android/src/main/res/xml/filepaths.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-  <cache-path name="cached_files" path="." />
-  <external-cache-path name="cached_files" path="." />
+    <external-path name="rnshare1" path="Download/" />
+    <cache-path name="rnshare2" path="/" />
 </paths>
